<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/balanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/main_text_background"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/default_balance_text"
            android:textSize="16sp"
            tools:text="BALANCE: 1274" />

        <TextView
            android:id="@+id/lastWinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/main_text_background"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/default_last_win_text"
            android:textSize="16sp"
            tools:text="LAST WIN: 3500" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/game_elements_background"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/set_bet"
            android:textSize="16sp" />

        <include
            android:id="@+id/bets"
            layout="@layout/bet_elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Space
            android:layout_height="8dp"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/spinButton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/spin" />
</androidx.constraintlayout.widget.ConstraintLayout>