<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    tools:ignore="DuplicateIds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/bet10"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/bet_click_effect"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bet_selected">

            <ImageView
                android:id="@+id/betDiamond"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/selected_diamond"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    tools:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:text="@string/bet10"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/betTextWithGradient"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    tools:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:text="@string/bet10"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:id="@+id/bet25"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/bet_click_effect"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bet_not_selected">

            <ImageView
                android:id="@+id/betDiamond"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/not_selected_diamond"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet25"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/betTextWithGradient"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet25"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:id="@+id/bet50"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/bet_click_effect"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bet_not_selected">

            <ImageView
                android:id="@+id/betDiamond"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/not_selected_diamond"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet50"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/betTextWithGradient"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet50"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:id="@+id/bet100"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/bet_click_effect"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bet_not_selected">

            <ImageView
                android:id="@+id/betDiamond"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/not_selected_diamond"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet100"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/betTextWithGradient"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/bet100"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>